# backend-go/router/router.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	"backend-go/internal/config"
+	"backend-go/internal/core/middleware"
 	"github.com/gin-gonic/gin"
 )
 
@@ -15,7 +16,7 @@ func Init(init *config.Initialization) *gin.Engine {
 		auth := api.Group("/auth")
 		{
 			auth.POST("/register", init.UserController.Register)
-			auth.POST("/login", init.UserController.Login)
+			auth.POST("/login", middleware.AuthMiddleware(init.UserService), init.UserController.Login)
 		}
 	}
 
